nowrap fixed

--- a/styles/base.css
+++ b/styles/base.css
@@ -82,7 +82,7 @@ picture img{
     padding: .25rem;
     font-weight: 700;
     font-size: 14px;
-    text-wrap: nowrap;
+    
 }
 
 main {
